2005-12-13  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/html/HTMLEditorKit.java
	(getHTMLDocument): Fixed implementation to catch exception.
	(getHTMLEditorKit): Likewise.
	(getElementsAt): Fixed to use recursion. Now all elements
	and all their children are added to the array, only using
	the default root element.
	(getElementsAt): New private helper function. Uses recursion.
	(elementCountToTag): Implemented.
	(findElementMatchingTag): Implemented.
	(parserCallback): Removed TODO comment. Nothing should be done here.
	All work for parser, is done in javax/swing/text/html/Parser.java
	and HTMLDocument.
	(flush): Likewise.
	(handleComment): Likewise.
	(handleEndOfLineString): Likewise.
	(handleEndTag): Likewise.
	(handleError): Likewise.
	(handleSimpleTag): Likewise.
	(handleStartTag): Likewise.
	(handleText): Likewise.
	(HTMLEditorKit): Implemented and added API documentation.
	(getParser): Fixed implementation to use a field to store the parser.
	(insertHTML): Implemented.
	(read): Implemented.
	(write): Partially implemented.
	(install): Added code to add the mouse listener.
	(deinstall): Added code to remove the mouse listener.
	(getActions): Modified FIXME comment.
	(getInputAttributes): Likewise.

2005-12-13  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/html/HTMLDocument.java:
	(tokenThreshold): New field.
	(parser): New field.
	(getParser): New API method.
	(setParser): New API method.
	(getTokenThreshold): New API method.
	(setTokenThreshold): New API method.
	(getReader(int, int, int, HTML.Tag)): New API method, not implemented.
	(HTMLReader): New API class, partially implemented.
	(HTMLReader.BlockAction): New API class, not implemented.
	(HTMLReader.CharacterAction): Likewise.
	(HTMLReader.FormAction): Likewise.
	(HTMLReader.HiddenAction): Likewise.
	(HTMLReader.IsindexAction): Likewise.
	(HTMLReader.ParagraphAction): Likewise.
	(HTMLReader.PreAction): Likewise.
	(HTMLReader.SpecialAction): Likewise.