@@ -1,5 +1,14 @@
 2005-12-13  Lillian Angel  <langel@redhat.com>
 
+	* javax/swing/text/html/HTMLDocument.java
+	(BlockElement.getName): Should use getAttribute because the API says
+	that this function can return null.
+	(RunElement): New class implemented.
+	(RunElement.getName): Implemented.
+	(RunElement.getResolvingParent): Implemented.
+
+2005-12-13  Lillian Angel  <langel@redhat.com>
+
 	* javax/swing/text/html/HTMLEditorKit.java
 	(getHTMLDocument): Fixed implementation to catch exception.
 	(getHTMLEditorKit): Likewise.
